# hackathon-starter

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: database_test.yml  lint.yml  test.yml  webapp_test.yml
alembic/: env.py
alembic/versions/: 2024_07_22_1318-d7cfe6f322d2.py
src/: main.py
src/controller/: main.py  users.py
src/model/: README.md  tables.py  users.py  utils.py
src/view/: main.html  users.html
tests/: api.py  database.py  test_api.py  test_database.py
