[tool.poetry]
name = "hackathon-starter"
version = "0.1.0"
description = "Default dependencies"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
jinja2 = "^3.1.4"
psycopg2-binary = "^2.9.9"
pytest = "^8.2.1"
python-dotenv = "^1.0.1"
requests = "^2.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"