[tool.poetry]
name = "hackathon-starter"
version = "0.1.0"
description = "Baseline for hackhathon project"
authors = ["Grzegorz Kodrzycki <g.kodrzycki20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
jinja2 = "^3.1.4"
psycopg2-binary = "^2.9.9"
pytest = "^8.2.1"
python-dotenv = "^1.0.1"
requests = "^2.32.2"
alembic = "^1.13.2"
pylint = "^3.2.6"
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.8.0"
detect-secrets = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint]
ignore = ["alembic","__init__.py"]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
  "missing-docstring",
  "no-member",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-timeout",
  "too-few-public-methods",
]
